project gen implementation